--- a/front-end/src/app/layout/app.topbar.component.html
+++ b/front-end/src/app/layout/app.topbar.component.html
@@ -21,6 +21,10 @@
             <i class="pi pi-calendar"></i>
             <span>Calendar</span>
         </button>
+        <button class="p-link layout-topbar-button">
+            <i class="pi pi-calendar"></i>
+            <span>Calendar</span>
+        </button>
         <button class="p-link layout-topbar-button" [routerLink]="'/user'">
             <i class="pi pi-user"></i>
             <span>Profile</span>
