--- a/front-end/src/app/demo/components/modal/novo-evento/novo-evento.component.html
+++ b/front-end/src/app/demo/components/modal/novo-evento/novo-evento.component.html
@@ -1,17 +1,16 @@
-<div class="grid p-0">
-
+<form #myForm="ngForm" class="grid p-0">
     <div class="col-12 md:col-12">
 
         <div class="p-fluid p-formgrid grid">
             <div class="field col-12 md:col-12  mb-0 pb-0">
-                <label htmlFor="esporteTipos" class="font-bold">Esporte Tipo</label>
-                <p-dropdown id="esporteTipos" [options]="esporteTipos" [(ngModel)]="event.esporteTipo"
+                <label htmlFor="sportType" class="font-bold">Esporte Tipo</label>
+                <p-dropdown name="sportType" id="sportType" [options]="esporteTipos" required="true" [(ngModel)]="event.esporteTipo"
                     placeholder="Filtrar Esporte Tipo"></p-dropdown>
             </div>
 
             <div class="field col-12 mb-0 pb-0">
                 <label for="description" class="font-bold">Descrição</label>
-                <textarea class="w-full" id="description" pInputTextarea [(ngModel)]="event.descricao" required
+                <textarea name="description" class="w-full" id="description" pInputTextarea [(ngModel)]="event.descricao" required
                     rows="3"></textarea>
             </div>
         </div>
@@ -33,17 +32,17 @@
 
             <div class="field col-12 md:col-4 mb-0 pb-0">
                 <label htmlFor="cityName" class="font-bold">Cidade</label>
-                <input pInputText id="cityName" disabled="true" [(ngModel)]="event.location.city.name" />
+                <input pInputText id="cityName" name="cityName" disabled="true" [(ngModel)]="event.location.city.name" />
             </div>
 
             <div class="field col-12 md:col-8 mb-0 pb-0">
                 <label htmlFor="address" class="font-bold">Endereço</label>
-                <input pInputText id="address" [(ngModel)]="event.location.address" />
+                <input pInputText id="address" name="address" [(ngModel)]="event.location.address" />
             </div>
 
             <div class="field col-12 md:col-12 mb-0 pb-0">
                 <label htmlFor="local" class="font-bold">Local</label>
-                <input pInputText id="local" [(ngModel)]="event.location.local" />
+                <input pInputText id="local" name="local" [(ngModel)]="event.location.local" />
             </div>
 
         </div>
@@ -65,14 +64,14 @@
 
             <div class="field col-12 md:col-12 mb-0 pb-0">
                 <label htmlFor="tipoHorario" class="font-bold">Tipo Horário</label>
-                <p-dropdown id="tipoHorario" [(ngModel)]="event.configHorario.tipo" [options]="eventoHorarioTipos"
-                    placeholder="Filtrar Esporte Tipo"></p-dropdown>
+                <p-dropdown id="tipoHorario" name="tipoHorario" [(ngModel)]="event.configHorario.tipo" [options]="eventoHorarioTipos"
+                    placeholder="Filtrar Horário Tipo"></p-dropdown>
             </div>
 
 
             <div *ngIf="event.configHorario.tipo === NAO_SE_REPETE" class="field col-12 md:col-6 mb-0 pb-0">
-                <label htmlFor="date" class="font-bold">Dia/Hora Começo</label>
-                <p-calendar id="date" [(ngModel)]="event.configHorario.uniqueSchedule.startSchedule"
+                <label htmlFor="startSchedule" class="font-bold">Dia/Hora Começo</label>
+                <p-calendar id="startSchedule" name="startSchedule" [(ngModel)]="event.configHorario.uniqueSchedule.startSchedule"
                     [iconDisplay]="'input'" [hourFormat]="24" [showIcon]="true" [showTime]="true"
                     inputId="calendar-24h" />
             </div>
@@ -92,9 +91,9 @@
             </div>
 
             <div *ngIf="event.configHorario.tipo === SEMANAL" class="field col-12 md:col-3">
-                <label htmlFor="date" class="font-bold">Hora Começo</label>
+                <label htmlFor="startHour" class="font-bold">Hora Começo</label>
 
-                <p-calendar [(ngModel)]="event.configHorario.horarioSemanal.startHour" [iconDisplay]="'input'"
+                <p-calendar [(ngModel)]="event.configHorario.horarioSemanal.startHour" name="startHour" id="startHour" [iconDisplay]="'input'"
                     [showIcon]="true" [timeOnly]="true" inputId="templatedisplay">
                     <ng-template pTemplate="inputicon" let-clickCallBack="clickCallBack">
                         <i class="fa-regular fa-clock  pointer-events-none" (click)="clickCallBack($event)"></i>
@@ -104,9 +103,9 @@
             </div>
 
             <div *ngIf="event.configHorario.tipo === SEMANAL" class="field col-12 md:col-3">
-                <label htmlFor="date" class="font-bold">Hora Fim</label>
+                <label htmlFor="endHour" class="font-bold">Hora Fim</label>
 
-                <p-calendar [(ngModel)]="event.configHorario.horarioSemanal.endHour" [iconDisplay]="'input'"
+                <p-calendar [(ngModel)]="event.configHorario.horarioSemanal.endHour" name="endHour" id="endHour" [iconDisplay]="'input'"
                     [showIcon]="true" [timeOnly]="true" inputId="templatedisplay">
                     <ng-template pTemplate="inputicon" let-clickCallBack="clickCallBack">
                         <i class="fa-regular fa-clock pointer-events-none" (click)="clickCallBack($event)"></i>
@@ -133,33 +132,28 @@
             </div>
 
             <div class="field col-12 md:col-4 mb-0 ml-3 mr-3">
-                <label htmlFor="lastname2" class="font-bold">Quantidade de Participantes</label>
-                <input pInputText id="lastname2" [(ngModel)]="event.quantidadeParticipantes" type="number" />
+                <label htmlFor="amountParticipants" class="font-bold">Quantidade de Participantes</label>
+                <input pInputText id="amountParticipants" name="amountParticipants" [(ngModel)]="event.quantidadeParticipantes" type="number" />
             </div>
 
             <div class="field col-12 md:col-2 mb-0 pb-0 flex align-items-center">
                 <label htmlFor="creatorIsParticipant" class="font-bold"></label>
-                <p-checkbox [(ngModel)]="event.creatorIsParticipant" id="creatorIsParticipant" label="Você é participante?"
-                    name="pizza" value="Cheese" />
+                <p-checkbox [(ngModel)]="event.creatorIsParticipant" id="creatorIsParticipant"
+                    label="Você é participante?" name="creatorIsParticipant" value="Cheese" />
             </div>
 
         </div>
     </div>
 
-</div>
+    <div class="col-12 p-0 flex flex-row align-items-center justify-content-end ">
+        <button (click)="salvarEvento()" [disabled]="isFormInvalid()" pButton pRipple type="button" label="Salvar"
+            class="p-button-rounded p-button-success"></button>
+    </div>
+
+</form>
 
 
 
-
-
-<div class="col-12 p-0 flex flex-row align-items-center justify-content-end ">
-    <button (click)="salvarEvento()" pButton pRipple type="button" label="Salvar"
-        class="p-button-rounded p-button-success"></button>
-</div>
-
-<div>
-
-</div>
 
 <!-- <div class="grid">
 	<div class="col-12 md:col-6">
