--- a/front-end/src/app/demo/components/modal/evento/evento.component.html
+++ b/front-end/src/app/demo/components/modal/evento/evento.component.html
@@ -9,13 +9,13 @@
                         <div class="field col-12 md:col-12  mb-0 pb-0">
                             <label htmlFor="esporteTipos" class="font-bold">Esporte Tipo</label>
                             <p-dropdown id="esporteTipos" [options]="esporteTipos" [disabled]="isNotUserCreator"
-                                [(ngModel)]="event.esporteTipo" placeholder="Filtrar Esporte Tipo"></p-dropdown>
+                                [(ngModel)]="event.sportType" placeholder="Filtrar Esporte Tipo"></p-dropdown>
                         </div>
 
                         <div class="field col-12 mb-0 pb-0">
                             <label for="description" class="font-bold">Descrição</label>
                             <textarea class="w-full" id="description" pInputTextarea [disabled]="isNotUserCreator"
-                                [(ngModel)]="event.descricao" required rows="3"></textarea>
+                                [(ngModel)]="event.description" required rows="3"></textarea>
                         </div>
                     </div>
                 </div>
@@ -135,18 +135,32 @@
                     <tr>
                         <th>Horário Começo</th>
                         <th>Horário Fim</th>
-                        <th style="align-items: center;">Situação</th>
-                        <th style="align-items: center;">Frequência</th>
+                        <th style="text-align: center;">Situação</th>
+                        <th style="text-align: center;">Confirmados</th>
+                        <th style="text-align: center;">Sua Presença</th>
                     </tr>
                 </ng-template>
                 <ng-template pTemplate="body" let-schedule>
                     <tr>
                         <td>{{ getScheduleFormated(schedule.horarioComeco) }}</td>
                         <td>{{ getScheduleFormated(schedule.horarioFim) }}</td>
-                        <td>
-                            <p-dropdown [options]="scheduleSituations" [disabled]="isNotUserCreator" [(ngModel)]="schedule.situation" />
+                        <td style="text-align: center;">
+                            <p-dropdown *ngIf="!isNotUserCreator" [options]="scheduleSituations"
+                                [(ngModel)]="schedule.situation" />
+
+                            <label *ngIf="isNotUserCreator" [style.color]="getColorSituation(schedule.situation)"
+                                style="font-weight: 700;">{{
+                                getDescriptionSituationSchedule(schedule.situation)}}</label>
+
+                            <!-- <p-tag *ngIf="isNotUserCreator" style="line-height: 3" [value]="getDescriptionSituationSchedule(schedule.situation)"
+                                [severity]="getSeverity(schedule.situation)" /> -->
+
                         </td>
-                        <td>
+                        <td style="text-align: center;">{{ schedule.confirmedParticipants }} / {{
+                            event.amountActiveParticipants }}</td>
+                        <td style="text-align: center;">
+                            <p-selectButton [options]="stateOptions" [(ngModel)]="value" optionLabel="label"
+                                optionValue="value" />
                         </td>
                     </tr>
                 </ng-template>
