--- a/front-end/src/app/demo/components/modal/novo-evento/novo-evento.component.html
+++ b/front-end/src/app/demo/components/modal/novo-evento/novo-evento.component.html
@@ -4,14 +4,14 @@
         <div class="p-fluid p-formgrid grid">
             <div class="field col-12 md:col-12  mb-0 pb-0">
                 <label htmlFor="sportType" class="font-bold">Esporte Tipo</label>
-                <p-dropdown name="sportType" id="sportType" [options]="esporteTipos" required="true" [(ngModel)]="event.esporteTipo"
-                    placeholder="Filtrar Esporte Tipo"></p-dropdown>
+                <p-dropdown name="sportType" id="sportType" [options]="esporteTipos" required="true"
+                    [(ngModel)]="event.sportType" placeholder="Filtrar Esporte Tipo"></p-dropdown>
             </div>
 
             <div class="field col-12 mb-0 pb-0">
                 <label for="description" class="font-bold">Descrição</label>
-                <textarea name="description" class="w-full" id="description" pInputTextarea [(ngModel)]="event.descricao" required
-                    rows="3"></textarea>
+                <textarea name="description" class="w-full" id="description" pInputTextarea
+                    [(ngModel)]="event.description" required rows="3"></textarea>
             </div>
         </div>
     </div>
@@ -32,7 +32,8 @@
 
             <div class="field col-12 md:col-4 mb-0 pb-0">
                 <label htmlFor="cityName" class="font-bold">Cidade</label>
-                <input pInputText id="cityName" name="cityName" disabled="true" [(ngModel)]="event.location.city.name" />
+                <input pInputText id="cityName" name="cityName" disabled="true"
+                    [(ngModel)]="event.location.city.name" />
             </div>
 
             <div class="field col-12 md:col-8 mb-0 pb-0">
@@ -64,16 +65,16 @@
 
             <div class="field col-12 md:col-12 mb-0 pb-0">
                 <label htmlFor="tipoHorario" class="font-bold">Tipo Horário</label>
-                <p-dropdown id="tipoHorario" name="tipoHorario" [(ngModel)]="event.configHorario.tipo" [options]="eventoHorarioTipos"
-                    placeholder="Filtrar Horário Tipo"></p-dropdown>
+                <p-dropdown id="tipoHorario" name="tipoHorario" [(ngModel)]="event.configHorario.tipo"
+                    [options]="eventoHorarioTipos" placeholder="Filtrar Horário Tipo"></p-dropdown>
             </div>
 
 
             <div *ngIf="event.configHorario.tipo === NAO_SE_REPETE" class="field col-12 md:col-6 mb-0 pb-0">
                 <label htmlFor="startSchedule" class="font-bold">Dia/Hora Começo</label>
-                <p-calendar id="startSchedule" name="startSchedule" [(ngModel)]="event.configHorario.uniqueSchedule.startSchedule"
-                    [iconDisplay]="'input'" [hourFormat]="24" [showIcon]="true" [showTime]="true"
-                    inputId="calendar-24h" />
+                <p-calendar id="startSchedule" name="startSchedule"
+                    [(ngModel)]="event.configHorario.uniqueSchedule.startSchedule" [iconDisplay]="'input'"
+                    [hourFormat]="24" [showIcon]="true" [showTime]="true" inputId="calendar-24h" />
             </div>
 
             <div *ngIf="event.configHorario.tipo === NAO_SE_REPETE" class="field col-12 md:col-6">
@@ -93,8 +94,8 @@
             <div *ngIf="event.configHorario.tipo === SEMANAL" class="field col-12 md:col-3">
                 <label htmlFor="startHour" class="font-bold">Hora Começo</label>
 
-                <p-calendar [(ngModel)]="event.configHorario.horarioSemanal.startHour" name="startHour" id="startHour" [iconDisplay]="'input'"
-                    [showIcon]="true" [timeOnly]="true" inputId="templatedisplay">
+                <p-calendar [(ngModel)]="event.configHorario.horarioSemanal.startHour" name="startHour" id="startHour"
+                    [iconDisplay]="'input'" [showIcon]="true" [timeOnly]="true" inputId="templatedisplay">
                     <ng-template pTemplate="inputicon" let-clickCallBack="clickCallBack">
                         <i class="fa-regular fa-clock  pointer-events-none" (click)="clickCallBack($event)"></i>
                     </ng-template>
@@ -105,8 +106,8 @@
             <div *ngIf="event.configHorario.tipo === SEMANAL" class="field col-12 md:col-3">
                 <label htmlFor="endHour" class="font-bold">Hora Fim</label>
 
-                <p-calendar [(ngModel)]="event.configHorario.horarioSemanal.endHour" name="endHour" id="endHour" [iconDisplay]="'input'"
-                    [showIcon]="true" [timeOnly]="true" inputId="templatedisplay">
+                <p-calendar [(ngModel)]="event.configHorario.horarioSemanal.endHour" name="endHour" id="endHour"
+                    [iconDisplay]="'input'" [showIcon]="true" [timeOnly]="true" inputId="templatedisplay">
                     <ng-template pTemplate="inputicon" let-clickCallBack="clickCallBack">
                         <i class="fa-regular fa-clock pointer-events-none" (click)="clickCallBack($event)"></i>
                     </ng-template>
@@ -133,13 +134,14 @@
 
             <div class="field col-12 md:col-4 mb-0 ml-3 mr-3">
                 <label htmlFor="amountParticipants" class="font-bold">Quantidade de Participantes</label>
-                <input pInputText id="amountParticipants" name="amountParticipants" [(ngModel)]="event.quantidadeParticipantes" type="number" />
+                <input pInputText id="amountParticipants" name="amountParticipants"
+                    [(ngModel)]="event.amountParticipants" type="number" />
             </div>
 
             <div class="field col-12 md:col-2 mb-0 pb-0 flex align-items-center">
                 <label htmlFor="creatorIsParticipant" class="font-bold"></label>
-                <p-checkbox [(ngModel)]="event.creatorIsParticipant" id="creatorIsParticipant"
-                    label="Você é participante?" name="creatorIsParticipant" value="Cheese" />
+                <p-checkbox [(ngModel)]="event.creatorIsParticipant" [binary]="true" inputId="binary"
+                    id="creatorIsParticipant" label="Você é participante?" name="creatorIsParticipant"/>
             </div>
 
         </div>
