--- a/front-end/src/assets/layout/styles/theme/lara-light-blue/theme.css
+++ b/front-end/src/assets/layout/styles/theme/lara-light-blue/theme.css
@@ -1711,8 +1711,9 @@
     color: #374151;
   }
   .p-selectbutton .p-button.p-highlight {
-    background: #3B82F6;
-    border-color: #3B82F6;
+    background-color: rgb(37, 99, 235);
+    background-image: linear-gradient(152deg, rgb(37, 99, 235) 0%, rgb(57, 183, 183) 100%);
+    border-color: rgb(37, 99, 235);
     color: #ffffff;
   }
   .p-selectbutton .p-button.p-highlight .p-button-icon-left,
@@ -1720,8 +1721,9 @@
     color: #ffffff;
   }
   .p-selectbutton .p-button.p-highlight:hover {
-    background: #2563eb;
-    border-color: #2563eb;
+    background-color: rgb(37, 99, 235);
+    background-image: linear-gradient(152deg, rgb(37, 99, 235) 0%, rgb(57, 183, 183) 100%);
+    border-color: rgb(37, 99, 235);
     color: #ffffff;
   }
   .p-selectbutton .p-button.p-highlight:hover .p-button-icon-left,
