--- a/front-end/src/app/demo/components/modal/novo-evento/novo-evento.component.html
+++ b/front-end/src/app/demo/components/modal/novo-evento/novo-evento.component.html
@@ -1,10 +1,10 @@
-<form #myForm="ngForm" class="grid p-0">
+<form [formGroup]="formGroup" class="grid p-0">
     <div class="col-12 md:col-12">
 
         <div class="p-fluid p-formgrid grid">
             <div class="field col-12 md:col-12  mb-0 pb-0">
                 <label htmlFor="sportType" class="font-bold">Esporte Tipo</label>
-                <p-dropdown name="sportType" id="sportType" [options]="esporteTipos" required="true"
+                <p-dropdown name="sportType" id="sportType" formControlName="sportType" [options]="options.sportTypes"  [group]="true"  required="true"
                     [(ngModel)]="event.sportType" placeholder="Filtrar Esporte Tipo"></p-dropdown>
             </div>
 
