--- a/front-end/src/app/demo/components/modal/evento/evento.component.html
+++ b/front-end/src/app/demo/components/modal/evento/evento.component.html
@@ -3,7 +3,7 @@
 
 <div *ngIf="loadingEvent" class="flex flex-row justify-content-center">
     <p-progressSpinner *ngIf="loadingEvent" styleClass="w-4rem h-4rem" strokeWidth="8" fill="var(--surface-ground)"
-    animationDuration=".8s" />
+        animationDuration=".8s" />
 </div>
 
 <div *ngIf="!loadingEvent" class="grid p-0">
@@ -104,8 +104,7 @@
                         <div *ngIf="event.configHorario.tipo === SEMANAL" class="field col-12 md:col-6">
                             <label htmlFor="date" class="font-bold">Dias da Semana</label>
                             <p-multiSelect [options]="diasSemanas" [(ngModel)]="diasSemanasSelected"
-                            placeholder="Selecionar os dias da semana"
-                                [disabled]="true" />
+                                placeholder="Selecionar os dias da semana" [disabled]="true" />
                         </div>
 
                         <div *ngIf="event.configHorario.tipo === SEMANAL" class="field col-12 md:col-3">
@@ -126,8 +125,7 @@
                             <label htmlFor="date" class="font-bold">Hora Fim</label>
 
                             <p-calendar [(ngModel)]="event.configHorario.horarioSemanal.endHour"
-                                [minDate]="event.configHorario.horarioSemanal.startHour"
-                                [iconDisplay]="'input'"
+                                [minDate]="event.configHorario.horarioSemanal.startHour" [iconDisplay]="'input'"
                                 [showIcon]="true" [timeOnly]="true" inputId="templatedisplay" [disabled]="true">
                                 <ng-template pTemplate="inputicon" let-clickCallBack="clickCallBack">
                                     <i class="fa-regular fa-clock pointer-events-none"
@@ -166,7 +164,7 @@
                         <td style="text-align: center;">{{ schedule.confirmedParticipants }} / {{
                             event.amountActiveParticipants }}</td>
                         <td style="text-align: center;">
-                            <p-selectButton [options]="stateOptions"
+                            <p-selectButton *ngIf="schedule.currentUserFrequency" [options]="stateOptions"
                                 [(ngModel)]="schedule.currentUserFrequency.frequency"
                                 (onChange)="setUserFrequency(schedule)" optionLabel="label" optionValue="value" />
                         </td>
@@ -177,8 +175,23 @@
         <p-tabPanel header="Participantes">
             <div class="col-12">
 
+                <div class="p-fluid p-formgrid grid pb-3 m-0">
+                    <div class="field col-12 md:col-3 mr-2 p-0">
+                        <label htmlFor="amountParticipants" class="font-bold">Quantidade de Participantes</label>
+                        <input pInputText id="amountParticipants" name="amountParticipants"
+                            [(ngModel)]="event.amountParticipants" type="number" />
+                    </div>
+
+                    <div class="field col-12 md:col-3 mb-0 p-0">
+                        <label htmlFor="amountActiveParticipants" class="font-bold">Quantidade de Participantes Ativos</label>
+                        <input pInputText id="amountActiveParticipants" [disabled]="true" name="amountActiveParticipants"
+                            [(ngModel)]="event.amountActiveParticipants" type="number" />
+                    </div>
+                </div>
+
                 <div class="col-12 md:col-12 p-1">
                     <div class="card p-1 surface-border">
+
                         <div class="flex flex-row align-items-center justify-content-between p-2">
                             <div class="flex flex-row align-items-center ">
                                 <p-avatar class="mr-2"
@@ -222,7 +235,7 @@
         </p-tabPanel>
     </p-tabView>
 
-    <div class="col-12 p-0 flex flex-row align-items-center justify-content-end gap-1 ">
+    <div class="col-12 p-0 flex flex-row align-items-center justify-content-end gap-1 pr-3">
 
         <button *ngIf="!isNotUserCreator" pButton pRipple type="button" label="Excluir"
             (click)="confirmDeleteEvent($event)" class="p-button-rounded p-button-danger"></button>
@@ -230,11 +243,10 @@
         <button *ngIf="!isNotUserCreator" pButton pRipple type="button" label="Atualizar" (click)="participateEvent()"
             class="p-button-rounded"></button>
 
-        <button *ngIf="isNotUserCreator" pButton pRipple type="button" label="Participar" (click)="participateEvent()"
+        <button *ngIf="isNotUserCreator && !isUserAlreadyParticipant" pButton pRipple type="button" label="Participar" (click)="participateEvent()"
             class="p-button-rounded"></button>
 
-        <button *ngIf="isNotUserCreator" pButton pRipple type="button" label="Deixar Evento"
-            (click)="participateEvent()" class="p-button-rounded"></button>
+        <button *ngIf="isNotUserCreator && isUserAlreadyParticipant" pButton pRipple type="button" label="Deixar Evento" (click)="participateEvent()" class="p-button-rounded"></button>
 
     </div>
 
