--- a/front-end/src/app/demo/components/landing/landing.component.html
+++ b/front-end/src/app/demo/components/landing/landing.component.html
@@ -12,7 +12,7 @@
                 </ul>
                 <div class="flex justify-content-between lg:block border-top-1 lg:border-top-none surface-border py-3 lg:py-0 mt-3 lg:mt-0">
                     <button pButton pRipple label="Login" routerLink="/auth/login" class="p-button-text p-button-rounded border-none font-light line-height-2 text-blue-500"></button>
-                    <button pButton pRipple label="Register" class="p-button-rounded border-none ml-5 font-light line-height-2 bg-blue-500 text-white"></button>
+                    <button pButton pRipple label="Register" routerLink="/auth/register" class="p-button-rounded border-none ml-5 font-light line-height-2 bg-blue-500 text-white"></button>
                 </div>
             </div>
         </div>
@@ -24,7 +24,7 @@
                 <button pButton pRipple type="button" label="Começar" class="p-button-rounded text-xl border-none mt-3 bg-blue-500 font-normal line-height-3 px-3 text-white"></button>
             </div>
             <div class="flex justify-content-center md:justify-content-end">
-                <img src="assets/demo/images/landing/screen-1.png" alt="Hero Image" class="w-9 md:w-auto">
+                <img src="assets/demo/images/landing/63e25dcf5dd860.jpg" style="border-radius:8px;" alt="Hero Image" class="w-9 md:w-auto">
             </div>
         </div>
 
