--- a/front-end/src/app/demo/components/user/user.component.html
+++ b/front-end/src/app/demo/components/user/user.component.html
@@ -2,20 +2,79 @@
     <div class="flex align-items-center justify-content-left m-0 background-avatar">
         <p-avatar class="mr-2 avatar" syle image="https://primefaces.org/cdn/primeng/images/demo/avatar/xuxuefeng.png"
             size="xlarge" shape="circle" />
-        <div class="name">
-            {{ user.name }} {{ user.lastName }}
-        </div>
+
+            <div class="name pl-3 pb-3 pt-3">
+                <p-button label="Seguir" [rounded]="true" severity="secondary" />
+            </div>
     </div>
 
-    <div class="grid p-5 pt-1">
-        <div class="col-12">
-            <p-card header="Detalhes Pessoais">
-                <p class="m-0">
-                    Lorem ipsum dolor sit amet...
-                </p>
-            </p-card>
-        </div>
-
+    <div class="name pl-4 pb-3">
+        {{ user.name }} {{ user.lastName }}
     </div>
+    <div class="pl-5 pb-3">
+        {{ user.bio }}
+    </div>
+
+    <p-tabView>
+        <p-tabPanel header="Sobre">
+            <div class="grid p-5 pt-1">
+
+            </div>
+        </p-tabPanel>
+        <p-tabPanel [header]="'Seguidores ' + amountFollowers">
+            <p-dataView #dv [value]="user.followers">
+                <ng-template pTemplate="list" let-followers>
+                    <div class="grid grid-nogutter">
+                        <div class="col-12" *ngFor="let follower of followers; let first = first" class="col-12">
+                            <div class="flex flex-column sm:flex-row sm:align-items-center p-3 " [ngClass]="{ 'border-top-1 surface-border': !first }">
+                                <div class="md:w-10rem relative">
+                                    <img class="block xl:block mx-auto border-round w-5" src="https://primefaces.org/cdn/primeng/images/demo/avatar/xuxuefeng.png" [alt]="'follower.name'" />
+                                </div>
+                                <div class="flex flex-column md:flex-row justify-content-between md:align-items-center flex-1 gap-4">
+                                    <div class="flex flex-row md:flex-column justify-content-between align-items-start gap-2">
+                                        <div>
+                                            <div class="text-lg font-medium text-900 mt-2">{{ follower.follower.name }} {{ follower.follower.lastName }}</div>
+                                        </div>
+                                    </div>
+                                    <div class="flex flex-column md:align-items-end gap-5">
+                                        <div class="flex flex-row-reverse md:flex-row gap-2">
+                                            <p-button icon="pi pi-user" class="flex-auto md:flex-initial white-space-nowrap" label="Seguidor" />
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </ng-template>
+            </p-dataView>
+        </p-tabPanel>
+        <p-tabPanel [header]="'Seguindo ' + amountfollowing">
+            <p-dataView #dv [value]="user.following">
+                <ng-template pTemplate="list" let-followings>
+                    <div class="grid grid-nogutter">
+                        <div class="col-12" *ngFor="let following of followings; let first = first" class="col-12">
+                            <div class="flex flex-column sm:flex-row sm:align-items-center p-3 " [ngClass]="{ 'border-top-1 surface-border': !first }">
+                                <div class="md:w-10rem relative">
+                                    <img class="block xl:block mx-auto border-round w-5" src="https://primefaces.org/cdn/primeng/images/demo/avatar/xuxuefeng.png" [alt]="'follower.name'" />
+                                </div>
+                                <div class="flex flex-column md:flex-row justify-content-between md:align-items-center flex-1 gap-4">
+                                    <div class="flex flex-row md:flex-column justify-content-between align-items-start gap-2">
+                                        <div>
+                                            <div class="text-lg font-medium text-900 mt-2">{{ following.following.name }} {{ following.following.lastName }}</div>
+                                        </div>
+                                    </div>
+                                    <div class="flex flex-column md:align-items-end gap-5">
+                                        <div class="flex flex-row-reverse md:flex-row gap-2">
+                                            <p-button icon="pi pi-user" class="flex-auto md:flex-initial white-space-nowrap" label="Seguindo" />
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </ng-template>
+            </p-dataView>
+        </p-tabPanel>
+    </p-tabView>
 
 </div>
